--- a/.drone.yml
+++ b/.drone.yml
@@ -12,7 +12,7 @@ steps:
       password:
         from_secret: DOCKERHUB_PASS
       purge: true
-      context: golang-node/
+      dockerfile: golang-node/Dockerfile
       build_args: 
         - GOLANG_VERSION=1.17.6
         - NODE_VERSION=17
