--- a/golang-node/Dockerfile
+++ b/golang-node/Dockerfile
@@ -10,3 +10,7 @@ COPY --from=node /usr/local/share /usr/local/share
 COPY --from=node /usr/local/lib /usr/local/lib
 COPY --from=node /usr/local/include /usr/local/include
 COPY --from=node /usr/local/bin /usr/local/bin
+
+RUN apt-get update
+RUN apt-get upgrade
+RUN apt-get install libfftw3-dev libsndfile1-dev
