--- a/golang-node/Dockerfile
+++ b/golang-node/Dockerfile
@@ -11,6 +11,6 @@ COPY --from=node /usr/local/lib /usr/local/lib
 COPY --from=node /usr/local/include /usr/local/include
 COPY --from=node /usr/local/bin /usr/local/bin
 
-RUN apt-get update
-RUN apt-get upgrade
-RUN apt-get install libfftw3-dev libsndfile1-dev
+RUN apk update
+RUN apk upgrade
+RUN apk add libfftw3-dev libsndfile1-dev
