--- a/.drone.yml
+++ b/.drone.yml
@@ -36,3 +36,20 @@ steps:
       tags:
         - latest
         - node18.7.0-alpine3.16
+  - name: openjdk-node:openjdk11-node18.7.0-alpine3.16
+    image: plugins/docker
+    settings:
+      repo: matseee/golang-node
+      username:
+        from_secret: DOCKERHUB_USER
+      password:
+        from_secret: DOCKERHUB_PASS
+      purge: true
+      dockerfile: openjdk-node/Dockerfile
+      build_args: 
+        - OPENJDK_VERSION=11
+        - NODE_VERSION=18.7.0
+        - ALPINE_VERSION=3.16
+      tags:
+        - latest
+        - openjdk11-node18.7.0-alpine3.16
