--- a/.drone.yml
+++ b/.drone.yml
@@ -20,6 +20,7 @@ steps:
       tags:
         - latest
         - go1.19.0-node18.7.0-alpine3.16
+
   - name: node:node18.7.0-alpine3.16
     image: plugins/docker
     settings:
@@ -36,10 +37,11 @@ steps:
       tags:
         - latest
         - node18.7.0-alpine3.16
+
   - name: openjdk-node:openjdk11-node18.7.0-alpine3.16
     image: plugins/docker
     settings:
-      repo: matseee/golang-node
+      repo: matseee/openjdk-node
       username:
         from_secret: DOCKERHUB_USER
       password:
