--- a/.drone.yml
+++ b/.drone.yml
@@ -20,7 +20,6 @@ steps:
       tags:
         - latest
         - go1.19.0-node18.7.0-alpine3.16
-
   - name: node:node18.7.0-alpine3.16
     image: plugins/docker
     settings:
@@ -37,21 +36,20 @@ steps:
       tags:
         - latest
         - node18.7.0-alpine3.16
-
-  - name: openjdk-node:openjdk11-node18.7.0-alpine3.16
-    image: plugins/docker
-    settings:
-      repo: matseee/openjdk-node
-      username:
-        from_secret: DOCKERHUB_USER
-      password:
-        from_secret: DOCKERHUB_PASS
-      purge: true
-      dockerfile: openjdk-node/Dockerfile
-      build_args: 
-        - OPENJDK_VERSION=11
-        - NODE_VERSION=18.7.0
-        - ALPINE_VERSION=3.16
-      tags:
-        - latest
-        - openjdk11-node18.7.0-alpine3.16
+  # - name: openjdk-node:openjdk11-node18.7.0-alpine3.16
+  #   image: plugins/docker
+  #   settings:
+  #     repo: matseee/openjdk-node
+  #     username:
+  #       from_secret: DOCKERHUB_USER
+  #     password:
+  #       from_secret: DOCKERHUB_PASS
+  #     purge: true
+  #     dockerfile: openjdk-node/Dockerfile
+  #     build_args: 
+  #       - OPENJDK_VERSION=11
+  #       - NODE_VERSION=18.7.0
+  #       - ALPINE_VERSION=3.16
+  #     tags:
+  #       - latest
+  #       - openjdk11-node18.7.0-alpine3.16
