--- a/node/Dockerfile
+++ b/node/Dockerfile
@@ -3,6 +3,7 @@ ARG NODE_VERSION
 
 FROM node:$NODE_VERSION-alpine$ALPINE_VERSION AS node
 
+RUN apk add git
 RUN apk add chromium
 
 ENV CHROME_BIN=/usr/bin/chromium-browser
