--- a/openjdk-node/Dockerfile
+++ b/openjdk-node/Dockerfile
@@ -12,6 +12,7 @@ COPY --from=node /usr/local/include /usr/local/include
 COPY --from=node /usr/local/bin /usr/local/bin
 
 RUN apk add fftw-dev libayatana-appindicator-dev gtk+3.0-dev build-base
+RUN apk add git
 RUN apk add chromium
 
 ENV CHROME_BIN=/usr/bin/chromium-browser
