fix drone plugin docker

--- a/.drone.yml
+++ b/.drone.yml
@@ -12,6 +12,7 @@ steps:
       password:
         from_secret: DOCKERHUB_PASS
       purge: true
+      demon_off: true
       dockerfile: golang-node/Dockerfile
       build_args: 
         - GOLANG_VERSION=1.24.2
@@ -29,6 +30,7 @@ steps:
       password:
         from_secret: DOCKERHUB_PASS
       purge: true
+      demon_off: true
       dockerfile: node/Dockerfile
       build_args:
         - NODE_VERSION=23.11.0
@@ -45,6 +47,7 @@ steps:
       password:
         from_secret: DOCKERHUB_PASS
       purge: true
+      demon_off: true
       dockerfile: openjdk-node/Dockerfile
       build_args: 
         - OPENJDK_VERSION=25
